create the project session

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header>
-        <img src="img/ue.jpg" alt="Foto perfil">
+        <a href="https://github.com/viniciussisouza" target="_blank"><img class="foto" src="img/ue.jpg" alt="Foto perfil"></a>
         <nav class="nav-header">
             <ul class="navbar-list">
                 <li><a href="#">Sobre</a></li>
@@ -31,6 +31,51 @@
                 <h1>Olá, eu sou o Vinicius</h1>
                 <p>Um desenvolvedor web</p>
             </div>
+        </section>
+        
+        <div class="bgcolor"></div>
+
+        <section class="projetos-container">
+            <h2>Estes são alguns dos meus projetos</h2>
+            <div class="projetos">
+                <div class="item-projeto">
+                    <img class="img-galeria" src="img/landing-page.png" alt="landing-page">
+                    <p class="title-galeria">
+                        Landing Page
+                    </p>
+                </div>
+                <div class="item-projeto">
+                    <img class="img-galeria" src="img/host.png" alt="host">
+                    <p class="title-galeria">
+                        HostSite
+                    </p>
+                </div>
+                <div class="item-projeto">
+                    <img class="img-galeria" src="img/doceria.png" alt="doceria">
+                    <p class="title-galeria">
+                        Doceria
+                    </p>
+                </div>
+                <div class="item-projeto">
+                    <img class="img-galeria" src="img/corpus.png" alt="site">
+                    <p class="title-galeria">
+                        Projeto Corpus
+                    </p>
+                </div>
+                <div class="item-projeto">
+                    <img class="img-galeria" src="img/formulario.png" alt="formulario">
+                    <p class="title-galeria">
+                        Formulário
+                    </p>
+                </div>
+                <div class="item-projeto">
+                    <img class="img-galeria" src="img/wpp.png" alt="wpp">
+                    <p class="title-galeria">
+                        WhatsApp Clone
+                    </p>
+                </div>
+            </div>
+
         </section>
     </main>
 </body>
