uptade section projects

--- a/index.html
+++ b/index.html
@@ -39,41 +39,56 @@
             <h2>Estes são alguns dos meus projetos</h2>
             <div class="projetos">
                 <div class="item-projeto">
-                    <img class="img-galeria" src="img/landing-page.png" alt="landing-page">
-                    <p class="title-galeria">
-                        Landing Page
-                    </p>
+                    <a href="https://viniciussisouza.github.io/landing-page/" target="_blank">
+                        <img class="img-galeria" src="img/landing-page.png" alt="landing-page">
+                        <p class="title-galeria">
+                            Landing Page
+                        </p>
+                    </a>
                 </div>
                 <div class="item-projeto">
-                    <img class="img-galeria" src="img/host.png" alt="host">
-                    <p class="title-galeria">
-                        HostSite
-                    </p>
+                    <a href="https://viniciussisouza.github.io/projeto-host/" target="_blank">
+                        <img class="img-galeria" src="img/host.png" alt="host">
+                        <p class="title-galeria">
+                            HostSite
+                        </p>
+                    </a>
                 </div>
                 <div class="item-projeto">
-                    <img class="img-galeria" src="img/doceria.png" alt="doceria">
-                    <p class="title-galeria">
-                        Doceria
-                    </p>
+                    <a href="https://viniciussisouza.github.io/projeto-doceria/" target="_blank">
+                        <img class="img-galeria" src="img/doceria.png" alt="doceria">
+                        <p class="title-galeria">
+                            Doceria
+                        </p>
+                    </a>
                 </div>
                 <div class="item-projeto">
-                    <img class="img-galeria" src="img/corpus.png" alt="site">
-                    <p class="title-galeria">
-                        Projeto Corpus
-                    </p>
+                    <a href="https://viniciussisouza.github.io/projeto_real/" target="_blank">
+                        <img class="img-galeria" src="img/corpus.png" alt="site">
+                        <p class="title-galeria">
+                            Projeto Corpus
+                        </p>
+                    </a>
                 </div>
                 <div class="item-projeto">
-                    <img class="img-galeria" src="img/formulario.png" alt="formulario">
-                    <p class="title-galeria">
-                        Formulário
-                    </p>
+                    <a href="https://viniciussisouza.github.io/projeto-form/" target="_blank">
+                        <img class="img-galeria" src="img/formulario.png" alt="formulario">
+                        <p class="title-galeria">
+                            Formulário
+                        </p>
+                    </a>
                 </div>
                 <div class="item-projeto">
-                    <img class="img-galeria" src="img/wpp.png" alt="wpp">
-                    <p class="title-galeria">
-                        WhatsApp Clone
-                    </p>
+                    <a href="https://viniciussisouza.github.io/wpp-clone/" target="_blank">
+                        <img class="img-galeria" src="img/wpp.png" alt="wpp">
+                        <p class="title-galeria">
+                            WhatsApp Clone
+                        </p>
+                    </a>
                 </div>
+            </div>
+            <div class="btn">
+                <a href="https://github.com/viniciussisouza" target="_blank"><button>Ver todos ></button></a>
             </div>
 
         </section>
