uptade session projects

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 </div>
             </div>
             <div class="btn">
-                <a href="https://github.com/viniciussisouza" target="_blank"><button>Ver todos ></button></a>
+                <a href="https://github.com/viniciussisouza" target="_blank"><button>Ver todos</button></a>
             </div>
 
         </section>
