finish the project

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,700;1,100&display=swap" rel="stylesheet">
+
+    <script src="https://kit.fontawesome.com/a9f98bb3d9.js" crossorigin="anonymous"></script>
     
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
@@ -92,6 +94,28 @@
             </div>
 
         </section>
+
+        <section class="contatos">
+            <div class="titulo-contato">
+                <h2>Vamos trabalhar juntos...</h2>
+                <p>O que irá querer em seu café?</p>
+            </div>
+            <div class="lista-contato">
+                <a href="https://www.facebook.com/viniciussouzaz/" target="_blank">
+                    <li><span class="fab fa-facebook-square"></span> Facebook</li>
+                </a>
+                <a href="https://github.com/viniciussisouza" target="_blank">
+                    <li><i class="fab fa-github-square"></i> GitHub</li>
+                </a>
+                <a href="https://www.instagram.com/uvinisouza/" target="_blank">
+                    <li><i class="fab fa-instagram-square"></i> Instagram</li>
+                </a>
+            </div>
+        </section>
+
+        <footer>
+            <p>@ViniciusSouza 2021</p>
+        </footer>
     </main>
 </body>
 </html>
