--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <a href="https://github.com/viniciussisouza" target="_blank"><img class="foto" src="img/ue.jpg" alt="Foto perfil"></a>
         <nav class="nav-header">
             <ul class="navbar-list">
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#">Projetos</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="#apresentacao">Sobre</a></li>
+                <li><a href="#projetos">Projetos</a></li>
+                <li><a href="#contatos">Contato</a></li>
             </ul>
         </nav>
     </header>
