--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         <nav class="nav-header">
             <ul class="navbar-list">
                 <li><a href="#apresentacao">Sobre</a></li>
-                <li><a href="#projetos">Projetos</a></li>
+                <li><a href="#projetos-container">Projetos</a></li>
                 <li><a href="#contatos">Contato</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <section class="apresentacao">
+        <section id="apresentacao" class="apresentacao">
             <div class="apresentacao-texto">
                 <h1>Olá, eu sou o Vinicius</h1>
                 <p>Um desenvolvedor web</p>
@@ -37,7 +37,7 @@
         
         <div class="bgcolor"></div>
 
-        <section class="projetos-container">
+        <section id="projetos-container" class="projetos-container">
             <h2>Estes são alguns dos meus projetos</h2>
             <div class="projetos">
                 <div class="item-projeto">
@@ -95,7 +95,7 @@
 
         </section>
 
-        <section class="contatos">
+        <section id="contatos" class="contatos">
             <div class="titulo-contato">
                 <h2>Vamos trabalhar juntos...</h2>
                 <p>O que irá querer em seu café?</p>
